added tests for library system